<resources>
    <string name="app_name">In-App Purchases Demo</string>
    <string name="product_id">premium</string>
    <string name="subscribe">Subscribe</string>
    <string name="restore">Restore</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="title_activity_buy_coins">BuyCoinsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="not_subscribed">Not Subscribed</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="buy_coins">Buy Coins</string>
    <string name="_20_remaining_coins">20 Remaining Coins</string>
    <string name="on">ON</string>
    <string name="remove_ads">Admob Remove Ads</string>
    <string name="non_consumable">Non - Consumable</string>
    <string name="removed_ads">Lifetime Removed Ads</string>
    <string name="all_features">All Features</string>
    <string name="price_and_duration">Price and duration</string>
    <string name="r20">R20</string>
    <string name="_50_coins">50 Coins</string>
    <string name="subscription_terms">Subscriptions are recurring. You will be automatically be billed through your Google Play Store Account, if you have enrolled for a trail you will be charged real money when the trail ends. Your subscription will auto-renew unless you cancel. You can manage your subscription in the settings in the Google Play Store</string>
    <string name="subscription_offers"> Our subscriptions only offers Ads removal in the App for the period of the subscription you chose, we have two subscription: 7 Days and 1 Month and the prices may differ per country, Please check them above. </string>
    <string name="about">Showing examples of all in-app purchases using the latest Google Play Billing Library, The app has covered\n----------------\n\n1: Multiple subscriptions.\n\n2: One time purchase (Non-Consumable purchase).\n\n3: Unlimited purchases (Consumable purchases).\n\n5: Remove Ads purchase.\n\n6: Restore owned purchase button.\n\n7: Auto subscription check and activate.</string>
    <string name="about_code">The source code has the following.\n----------------\n\n1: Multiple subscriptions.\n\n2: One time purchase (Non-Consumable purchase).\n\n3: Unlimited purchases (Consumable purchases).\n\n5: Remove Ads purchase.\n\n6: Restore owned purchase button.\n\n7: Auto subscription check and activate.\n\nOnce you buy the Life time Purchase below, you will be able to Download the Complete App Source Code and you own it for lifetime. Free Future updates will be provided.</string>
    <string name="combined_products">This screen is showing different product types. \n----------------\n\n1: subscriptions.\n\n2: One time purchase (Non-Consumable purchase).\n\n3: Unlimited purchases (Consumable purchases). </string>
    <string name="buy_source_code">Buy Source Code</string>
    <string name="in_app_purchase_explaination">This screen is showing different product types. \n----------------\n\n1: subscriptions.\n\n2: One time purchase (Non-Consumable purchase).\n\n3: Unlimited purchases (Consumable purchases).</string>

</resources>