<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg_dark"
    tools:context=".activities.FacebookRemoveAdsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/blue"
        app:title="Facebook Remove Ads"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_above="@id/fab"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/white"
        android:backgroundTint="@color/blue"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"
        android:tint="@color/orange"
        android:text="@string/restore_purchases"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_baseline_restore_24"
        android:contentDescription="@string/restore_purchases"
        android:layout_margin="16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/imgview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/non_consumable"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/cc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/RemoveAds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:src="@drawable/ic_baseline_check_circle_outline_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/removed_ads"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardCornerRadius="10dp"
                    android:visibility="invisible"
                    android:id="@+id/mainCard"
                    android:layout_marginTop="20dp"
                    app:cardMaxElevation="12dp"
                    android:layout_below="@id/RemoveAds"
                    app:cardPreventCornerOverlap="true"
                    android:layout_height="wrap_content"
                    app:cardElevation="10dp"
                    app:cardBackgroundColor="@color/blue">

                    <RelativeLayout
                        android:padding="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/product"
                            android:layout_width="wrap_content"
                            android:gravity="center_horizontal"
                            android:layout_centerHorizontal="true"
                            android:layout_height="wrap_content"
                            android:text="R20 - Remove Ads Lifetime"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <ProgressBar
                    android:id="@+id/loadingProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/RemoveAds"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="100dp"
                    android:visibility="visible" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
